// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpecDialog matches snapshot no initSpec 1`] = `
<div
  class="bp3-portal"
>
  <div
    class="bp3-overlay bp3-overlay-open bp3-overlay-scroll-container"
  >
    <div
      class="bp3-overlay-backdrop bp3-overlay-appear bp3-overlay-appear-active"
    />
    <div
      class="bp3-dialog-container bp3-overlay-content bp3-overlay-appear bp3-overlay-appear-active"
      tabindex="0"
    >
      <div
        class="bp3-dialog spec-dialog"
      >
        <div
          class="bp3-dialog-header"
        >
          <h4
            class="bp3-heading"
          >
            test
          </h4>
          <button
            aria-label="Close"
            class="bp3-button bp3-minimal bp3-dialog-close-button"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-small-cross"
              icon="small-cross"
            >
              <svg
                data-icon="small-cross"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  small-cross
                </desc>
                <path
                  d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class=" ace_editor ace_hidpi ace-tm spec-dialog-textarea placeholder-padding"
          id="ace-editor"
          style="width: 100%; height: 500px; font-size: 12px;"
        >
          <textarea
            autocapitalize="off"
            autocorrect="off"
            class="ace_text-input"
            spellcheck="false"
            style="opacity: 0; font-size: 1px;"
            wrap="off"
          />
          <div
            aria-hidden="true"
            class="ace_gutter"
          >
            <div
              class="ace_layer ace_gutter-layer ace_folding-enabled"
              style="height: 1000000px;"
            />
          </div>
          <div
            class="ace_scroller"
            style="line-height: 0px;"
          >
            <div
              class="ace_content"
            >
              <div
                class="ace_layer ace_print-margin-layer"
              >
                <div
                  class="ace_print-margin"
                  style="left: 10px; visibility: hidden;"
                />
              </div>
              <div
                class="ace_layer ace_marker-layer"
              />
              <div
                class="ace_layer ace_text-layer"
                style="height: 1000000px; margin: 0px 10px;"
              />
              <div
                class="ace_layer ace_marker-layer"
              />
              <div
                class="ace_layer ace_cursor-layer ace_hidden-cursors"
              >
                <div
                  class="ace_cursor"
                />
              </div>
            </div>
            <div
              class="ace_comment ace_placeholder"
              style="padding: 0px 9px; position: absolute; z-index: 3;"
            >
              { JSON spec... }
            </div>
          </div>
          <div
            class="ace_scrollbar ace_scrollbar-v"
            style="display: none; width: 20px;"
          >
            <div
              class="ace_scrollbar-inner"
              style="width: 20px;"
            >
               
            </div>
          </div>
          <div
            class="ace_scrollbar ace_scrollbar-h"
            style="display: none; height: 20px;"
          >
            <div
              class="ace_scrollbar-inner"
              style="height: 20px;"
            >
               
            </div>
          </div>
          <div
            style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: hidden;"
          >
            <div
              style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
            />
            <div
              style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
            >
              XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
            </div>
          </div>
        </div>
        <div
          class="bp3-dialog-footer"
        >
          <div
            class="bp3-dialog-footer-actions"
          >
            <button
              class="bp3-button"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Close
              </span>
            </button>
            <button
              class="bp3-button bp3-disabled bp3-intent-primary"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Submit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SpecDialog matches snapshot with initSpec 1`] = `
<div
  class="bp3-portal"
>
  <div
    class="bp3-overlay bp3-overlay-open bp3-overlay-scroll-container"
  >
    <div
      class="bp3-overlay-backdrop bp3-overlay-appear bp3-overlay-appear-active"
    />
    <div
      class="bp3-dialog-container bp3-overlay-content bp3-overlay-appear bp3-overlay-appear-active"
      tabindex="0"
    >
      <div
        class="bp3-dialog spec-dialog"
      >
        <div
          class="bp3-dialog-header"
        >
          <h4
            class="bp3-heading"
          >
            test
          </h4>
          <button
            aria-label="Close"
            class="bp3-button bp3-minimal bp3-dialog-close-button"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-small-cross"
              icon="small-cross"
            >
              <svg
                data-icon="small-cross"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  small-cross
                </desc>
                <path
                  d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class=" ace_editor ace_hidpi ace-tm spec-dialog-textarea placeholder-padding"
          id="ace-editor"
          style="width: 100%; height: 500px; font-size: 12px;"
        >
          <textarea
            autocapitalize="off"
            autocorrect="off"
            class="ace_text-input"
            spellcheck="false"
            style="opacity: 0; font-size: 1px;"
            wrap="off"
          />
          <div
            aria-hidden="true"
            class="ace_gutter"
          >
            <div
              class="ace_layer ace_gutter-layer ace_folding-enabled"
              style="height: 1000000px;"
            />
          </div>
          <div
            class="ace_scroller"
            style="line-height: 0px;"
          >
            <div
              class="ace_content"
            >
              <div
                class="ace_layer ace_print-margin-layer"
              >
                <div
                  class="ace_print-margin"
                  style="left: 10px; visibility: hidden;"
                />
              </div>
              <div
                class="ace_layer ace_marker-layer"
              />
              <div
                class="ace_layer ace_text-layer"
                style="height: 1000000px; margin: 0px 10px;"
              />
              <div
                class="ace_layer ace_marker-layer"
              />
              <div
                class="ace_layer ace_cursor-layer ace_hidden-cursors"
              >
                <div
                  class="ace_cursor"
                />
              </div>
            </div>
          </div>
          <div
            class="ace_scrollbar ace_scrollbar-v"
            style="display: none; width: 20px;"
          >
            <div
              class="ace_scrollbar-inner"
              style="width: 20px;"
            >
               
            </div>
          </div>
          <div
            class="ace_scrollbar ace_scrollbar-h"
            style="display: none; height: 20px;"
          >
            <div
              class="ace_scrollbar-inner"
              style="height: 20px;"
            >
               
            </div>
          </div>
          <div
            style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: hidden;"
          >
            <div
              style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
            />
            <div
              style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
            >
              XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
            </div>
          </div>
        </div>
        <div
          class="bp3-dialog-footer"
        >
          <div
            class="bp3-dialog-footer-actions"
          >
            <button
              class="bp3-button"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Close
              </span>
            </button>
            <button
              class="bp3-button bp3-intent-primary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Submit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
